# ParserV1

./: LKz ntcnjd.csv  OrderSearch(1-261)_22.09.2023 строительство судна — копия.csv  OrderSearch(1-261)_22.09.2023 строительство судна.csv  Parser.py  ParserOld.py  all_info.json  all_info_test.json  collaps_data.json  data.json  experem.py  index.html  index2.html  jornal.json  main.py  otladka.py  output.csv  parserRussinaShips.py  pyproject.toml  requirements.txt  ships_info — копия.xlsx  ships_info_transposed.xlsx  test.py  ui_mainwindow.py  untitled.ui  Все данные о закупке.docx  Флот Рыбной промышленности России.xlsx
Docs/Документация по закупке/: Документация.doc  Извещение.docx  Приложение №1 Проект договора.docx
Docs/Разъяснения документации/: 210484600168.docx
Закупка № 0373100119622000001/Документы протокола/: Протокол подведения итогов - №0373100119622000001.doc  Электронный документ, полученный из внешней системы
Закупка № 31704961137/: Все данные о закупке №5963715.docx
Закупка № 31704961137/Документация по закупке/: Закупочная документация.docx
Закупка № 31704961137/Протоколы работы комиссии/: Протокол.docx
Извещение, изменение извещения о проведении электронного аукциона/: 1. НМЦК.xlsx  2. Проект Типовой контракт.doc  3. Описание объекта закупки.xls  4. Требования к содержанию, составу заявки, инструкция (Прил. 4).docx
Протоколы работы комиссии/: Протокол подведения итогов АЭФ-ОЗТ-723-22.doc  Электронный документ, полученный из внешней системы.xml
